--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мої плагіни для Lampa</title>
+    <title>Плагіни для Lampa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🪔 Мої плагіни для Lampa</h1>
+            <h1>🎁 Плагіни для Lampa</h1>
             <p>Список доступних плагінів для медіа-плеєра Lampa</p>
         </header>
 
         <main>
             <div class="plugin-card">
                 <h2>Torrent Styles Plugin</h2>
-                <p>Плагін для заміни текстів та стилізації торентів</p>
+                <p>Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato</p>
                 <div class="links">
-                    <a href="myplugin.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/myplugin.js" class="btn">Пряме посилання</a>
+                    <a href="rating_omdb.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">Пряме посилання</a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/myplugin.js</code>
+                <code>https://ne3nayskas.github.io/plugins/rating_omdb.js</code>
             </div>
 
             <div class="plugin-card">
@@ -34,7 +34,7 @@
         </main>
 
         <footer>
-            <p>© 2024 Мої плагіни. Всі права захищені.</p>
+            <p>© 2024 ne3nayskas. Всі права захищені.</p>
         </footer>
     </div>
 </body>
