--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <main>
             <div class="plugin-card">
-                <h2>Torrent Styles Plugin</h2>
+                <h2>Rating Omdb</h2>
                 <p>Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato</p>
                 <div class="links">
                     <a href="rating_omdb.js" download class="btn">Завантажити</a>
