--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             </div>
 
             <div class="plugin-card">
+                <h2>Pidbirky</h2>
+                <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
+                <div class="links">
+                    <a href="p.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/p.js</code>
+            </div>
+
+            <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
                 <div class="links">
