--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </div>
 
             <div class="plugin-card">
-                <h2>Pidbirky</h2>
-                <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
+                <h2>Vote Colour</h2>
+                <p>Плагін кольорового рейтингу</p>
                 <div class="links">
-                    <a href="p.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                    <a href="vote_colour.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">Пряме посилання</a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/p.js</code>
+                <code>https://ne3nayskas.github.io/plugins/vote_colour.js</code>
             </div>
 
             <div class="plugin-card">
