--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="plugin-card">
                 <h2>Vote Colour</h2>
-                <p>Плагін кольорового рейтингу</p>
+                <p>Плагін кольорового рейтингу на картках фільмів в Lampa</p>
                 <div class="links">
                     <a href="vote_colour.js" download class="btn">Завантажити</a>
                     <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">Пряме посилання</a>
