--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
             </div>
 
             <div class="plugin-card">
-                <h2>Pidbirky</h2>
-                <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
+                <h2>Torr Styles</h2>
+                <p>Плагін для додавання стилізації результатів Torrents</p>
                 <div class="links">
-                    <a href="p.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                    <a href="torr_styles.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">Пряме посилання</a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/p.js</code>
+                <code>https://ne3nayskas.github.io/plugins/torr_styles.js</code>
             </div>
 
             <div class="plugin-card">
-                <h2>Pidbirky</h2>
-                <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
+                <h2>3buttons</h2>
+                <p>Плагін для додавання стилізованих кнопок: Online/Torrent/Trailers</p>
                 <div class="links">
-                    <a href="p.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                    <a href="3buttons.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">Пряме посилання</a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/p.js</code>
+                <code>https://ne3nayskas.github.io/plugins/3buttons.js</code>
             </div>
 
             <div class="plugin-card">
-                <h2>Pidbirky</h2>
-                <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
+                <h2>Cache</h2>
+                <p>Плагін додавання кнопки очистки кеш в шапку Lampa</p>
                 <div class="links">
-                    <a href="p.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                    <a href="cache.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">Пряме посилання</a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/p.js</code>
+                <code>https://ne3nayskas.github.io/plugins/cache.js</code>
             </div>
 
             <div class="plugin-card">
