--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
             </div>
 
             <div class="plugin-card">
+                <h2>Exit</h2>
+                <p>Плагін додавання кнопки Вихід - в меню Lampa</p>
+                <div class="links">
+                    <a href="exit.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/exit.js</code>
+            </div>
+
+            <div class="plugin-card">
+                <h2>Logo</h2>
+                <p>Плагін додавання логотипів фільмів - замість назви, в картках Lampa</p>
+                <div class="links">
+                    <a href="logo.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/logo.js</code>
+            </div>
+
+            <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
                 <div class="links">
