--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             </div>
 
             <div class="plugin-card">
+                <h2>Networks</h2>
+                <p>Плагін додає платформи виробництва фільмів і серіалів в картках Lampa</p>
+                <div class="links">
+                    <a href="tmdb_networks.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/tmdb_networks.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/tmdb_networks.js</code>
+            </div>
+
+            <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
                 <div class="links">
