--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
             </div>
 
             <div class="plugin-card">
+                <h2>Quality</h2>
+                <p>Плагін додає відмітки максимально можливої якості існуючої на фільмах</p>
+                <div class="links">
+                    <a href="quality.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/quality.js</code>
+            </div>
+
+            <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
                 <div class="links">
