--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
             </div>
 
             <div class="plugin-card">
+                <h2>NoTrailers</h2>
+                <p>Плагін прибирає кнопку Трейлери в картках фільмів</p>
+                <div class="links">
+                    <a href="notrailers.js" download class="btn">Завантажити</a>
+                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">Пряме посилання</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
+            </div>
+
+            <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
                 <div class="links">
