--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </header>
 
         <main>
+            <!-- Rating Omdb -->
             <div class="plugin-card">
                 <h2>Rating Omdb</h2>
                 <p>Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato</p>
@@ -24,6 +25,7 @@
                 <code>https://ne3nayskas.github.io/plugins/rating_omdb.js</code>
             </div>
 
+            <!-- Vote Colour -->
             <div class="plugin-card">
                 <h2>Vote Colour</h2>
                 <p>Плагін кольорового рейтингу на картках фільмів в Lampa</p>
@@ -34,6 +36,7 @@
                 <code>https://ne3nayskas.github.io/plugins/vote_colour.js</code>
             </div>
 
+            <!-- Pidbirky -->
             <div class="plugin-card">
                 <h2>Pidbirky</h2>
                 <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
@@ -44,6 +47,7 @@
                 <code>https://ne3nayskas.github.io/plugins/p.js</code>
             </div>
 
+            <!-- Torr Styles -->
             <div class="plugin-card">
                 <h2>Torr Styles</h2>
                 <p>Плагін для додавання стилізації результатів Torrents</p>
@@ -54,6 +58,7 @@
                 <code>https://ne3nayskas.github.io/plugins/torr_styles.js</code>
             </div>
 
+            <!-- 3buttons -->
             <div class="plugin-card">
                 <h2>3buttons</h2>
                 <p>Плагін для додавання стилізованих кнопок: Online/Torrent/Trailers</p>
@@ -64,6 +69,7 @@
                 <code>https://ne3nayskas.github.io/plugins/3buttons.js</code>
             </div>
 
+            <!-- Cache -->
             <div class="plugin-card">
                 <h2>Cache</h2>
                 <p>Плагін додавання кнопки очистки кеш в шапку Lampa</p>
@@ -74,6 +80,7 @@
                 <code>https://ne3nayskas.github.io/plugins/cache.js</code>
             </div>
 
+            <!-- Exit -->
             <div class="plugin-card">
                 <h2>Exit</h2>
                 <p>Плагін додавання кнопки Вихід - в меню Lampa</p>
@@ -84,6 +91,7 @@
                 <code>https://ne3nayskas.github.io/plugins/exit.js</code>
             </div>
 
+            <!-- Logo -->
             <div class="plugin-card">
                 <h2>Logo</h2>
                 <p>Плагін додавання логотипів фільмів - замість назви, в картках Lampa</p>
@@ -94,6 +102,7 @@
                 <code>https://ne3nayskas.github.io/plugins/logo.js</code>
             </div>
 
+            <!-- Networks -->
             <div class="plugin-card">
                 <h2>Networks</h2>
                 <p>Плагін додає платформи виробництва фільмів і серіалів в картках Lampa</p>
@@ -104,6 +113,7 @@
                 <code>https://ne3nayskas.github.io/plugins/networks.js</code>
             </div>
 
+            <!-- Quality -->
             <div class="plugin-card">
                 <h2>Quality</h2>
                 <p>Плагін додає відмітки максимально можливої якості існуючої на фільмах</p>
@@ -114,6 +124,7 @@
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
             </div>
 
+            <!-- NoTrailers -->
             <div class="plugin-card">
                 <h2>NoTrailers</h2>
                 <p>Плагін прибирає кнопку Трейлери в картках фільмів</p>
@@ -124,6 +135,7 @@
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
 
+            <!-- Інші плагіни -->
             <div class="plugin-card">
                 <h2>Інші плагіни</h2>
                 <p>Тут можуть бути ваші майбутні плагіни</p>
