--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h2>Rating Omdb</h2>
                 <p>Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato</p>
                 <div class="links">
-                    <a href="rating_omdb.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">Пряме посилання</a>
+                    <a href="rating_omdb.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/rating_omdb.js</code>
             </div>
@@ -30,8 +30,8 @@
                 <h2>Vote Colour</h2>
                 <p>Плагін кольорового рейтингу на картках фільмів в Lampa</p>
                 <div class="links">
-                    <a href="vote_colour.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">Пряме посилання</a>
+                    <a href="vote_colour.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/vote_colour.js</code>
             </div>
@@ -41,8 +41,8 @@
                 <h2>Pidbirky</h2>
                 <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
                 <div class="links">
-                    <a href="p.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">Пряме посилання</a>
+                    <a href="p.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/p.js</code>
             </div>
@@ -52,8 +52,8 @@
                 <h2>Torr Styles</h2>
                 <p>Плагін для додавання стилізації результатів Torrents</p>
                 <div class="links">
-                    <a href="torr_styles.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">Пряме посилання</a>
+                    <a href="torr_styles.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/torr_styles.js</code>
             </div>
@@ -63,8 +63,8 @@
                 <h2>3buttons</h2>
                 <p>Плагін для додавання стилізованих кнопок: Online/Torrent/Trailers</p>
                 <div class="links">
-                    <a href="3buttons.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">Пряме посилання</a>
+                    <a href="3buttons.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/3buttons.js</code>
             </div>
@@ -74,8 +74,8 @@
                 <h2>Cache</h2>
                 <p>Плагін додавання кнопки очистки кеш в шапку Lampa</p>
                 <div class="links">
-                    <a href="cache.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">Пряме посилання</a>
+                    <a href="cache.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/cache.js</code>
             </div>
@@ -85,8 +85,8 @@
                 <h2>Exit</h2>
                 <p>Плагін додавання кнопки Вихід - в меню Lampa</p>
                 <div class="links">
-                    <a href="exit.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">Пряме посилання</a>
+                    <a href="exit.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/exit.js</code>
             </div>
@@ -96,8 +96,8 @@
                 <h2>Logo</h2>
                 <p>Плагін додавання логотипів фільмів - замість назви, в картках Lampa</p>
                 <div class="links">
-                    <a href="logo.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">Пряме посилання</a>
+                    <a href="logo.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/logo.js</code>
             </div>
@@ -107,8 +107,8 @@
                 <h2>Networks</h2>
                 <p>Плагін додає платформи виробництва фільмів і серіалів в картках Lampa</p>
                 <div class="links">
-                    <a href="networks.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/networks.js" class="btn">Пряме посилання</a>
+                    <a href="networks.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/networks.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/networks.js</code>
             </div>
@@ -118,8 +118,8 @@
                 <h2>Quality</h2>
                 <p>Плагін додає відмітки максимально можливої якості існуючої на фільмах</p>
                 <div class="links">
-                    <a href="quality.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">Пряме посилання</a>
+                    <a href="quality.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
             </div>
@@ -129,8 +129,8 @@
                 <h2>NoTrailers</h2>
                 <p>Плагін прибирає кнопку Трейлери в картках фільмів</p>
                 <div class="links">
-                    <a href="notrailers.js" download class="btn">Завантажити</a>
-                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">Пряме посилання</a>
+                    <a href="notrailers.js" download class="btn">/.download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">/.url_link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
