--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato</p>
                 <div class="links">
                     <a href="rating_omdb.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/rating_omdb.js</code>
             </div>
@@ -31,7 +31,7 @@
                 <p>Плагін кольорового рейтингу на картках фільмів в Lampa</p>
                 <div class="links">
                     <a href="vote_colour.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/vote_colour.js</code>
             </div>
@@ -42,7 +42,7 @@
                 <p>Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
                 <div class="links">
                     <a href="p.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/p.js</code>
             </div>
@@ -53,7 +53,7 @@
                 <p>Плагін для додавання стилізації результатів Torrents</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/torr_styles.js</code>
             </div>
@@ -64,7 +64,7 @@
                 <p>Плагін для додавання стилізованих кнопок: Online/Torrent/Trailers</p>
                 <div class="links">
                     <a href="3buttons.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/3buttons.js</code>
             </div>
@@ -75,7 +75,7 @@
                 <p>Плагін додавання кнопки очистки кеш в шапку Lampa</p>
                 <div class="links">
                     <a href="cache.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/cache.js</code>
             </div>
@@ -86,7 +86,7 @@
                 <p>Плагін додавання кнопки Вихід - в меню Lampa</p>
                 <div class="links">
                     <a href="exit.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/exit.js</code>
             </div>
@@ -97,7 +97,7 @@
                 <p>Плагін додавання логотипів фільмів - замість назви, в картках Lampa</p>
                 <div class="links">
                     <a href="logo.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/logo.js</code>
             </div>
@@ -108,7 +108,7 @@
                 <p>Плагін додає платформи виробництва фільмів і серіалів в картках Lampa</p>
                 <div class="links">
                     <a href="networks.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/networks.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/networks.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/networks.js</code>
             </div>
@@ -119,7 +119,7 @@
                 <p>Плагін додає відмітки максимально можливої якості існуючої на фільмах</p>
                 <div class="links">
                     <a href="quality.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
             </div>
@@ -130,7 +130,7 @@
                 <p>Плагін прибирає кнопку Трейлери в картках фільмів</p>
                 <div class="links">
                     <a href="notrailers.js" download class="btn">/.download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">/.url_link/</a>
+                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
