--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎁 Плагіни для Lampa</h1>
-            <p>Список доступних плагінів для медіа-плеєра Lampa</p>
+            <h1>🎁 Плагіни для Lampa-c</h1>
+            <p> Список доступних плагінів для медіа-плеєра Lampa</p>
         </header>
 
         <main>
