--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <body>
     <div class="container">
         <div class="language-switcher">
-            <button class="lang-btn" data-lang="eng">ENG</button>
-            <button class="lang-btn" data-lang="ukr">UKR</button>
+            <button class="lang-btn" data-lang="eng">🇬🇧 ENG</button>
+            <button class="lang-btn" data-lang="ukr">🇺🇦 UKR</button>
         </div>
 
         <header>
