--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <body>
     <div class="container">
         <div class="language-switcher">
-            <button class="lang-btn" data-lang="eng">🇬🇧 ENG</button>
-            <button class="lang-btn" data-lang="ukr">🇺🇦 UKR</button>
+            <button class="lang-btn" data-lang="eng" style="background: linear-gradient(45deg, #012169, #C8102E, #FFFFFF);">ENG</button>
+            <button class="lang-btn" data-lang="ukr" style="background: linear-gradient(45deg, #0057B7, #FFD700);">UKR</button>
         </div>
 
         <header>
