--- a/index.html
+++ b/index.html
@@ -101,25 +101,8 @@
 <body>
     <div class="container">
         <div class="language-switcher">
-<button class="lang-btn" data-lang="eng">
-    <svg width="20" height="15" viewBox="0 0 60 30" style="vertical-align: middle; margin-right: 5px;">
-        <rect width="60" height="30" fill="#012169"/>
-        <rect width="60" height="2" y="10" fill="#fff"/>
-        <rect width="2" height="30" x="20" fill="#fff"/>
-        <rect width="60" height="2" y="20" fill="#fff"/>
-        <rect width="2" height="30" x="40" fill="#fff"/>
-        <rect width="60" height="1" y="15" fill="#C8102E"/>
-        <rect width="1" height="30" x="30" fill="#C8102E"/>
-    </svg>
-    ENG
-</button>
-<button class="lang-btn" data-lang="ukr">
-    <svg width="20" height="15" viewBox="0 0 60 30" style="vertical-align: middle; margin-right: 5px;">
-        <rect width="60" height="15" y="0" fill="#0057B7"/>
-        <rect width="60" height="15" y="15" fill="#FFD700"/>
-    </svg>
-    UKR
-</button>
+        <button class="lang-btn" data-lang="eng">ENG</button>
+        <button class="lang-btn" data-lang="ukr">UKR</button>
         </div>
 
         <header>
