--- a/index.html
+++ b/index.html
@@ -242,9 +242,16 @@
             </div>
         </main>
 
-        <footer>
-            <p data-eng="© 2024 ne3nayskas. All rights reserved." data-ukr="© 2024 ne3nayskas. Всі права захищені.">© 2024 ne3nayskas. All rights reserved.</p>
-        </footer>
+<footer>
+    <p data-eng="© 2024 ne3nayskas. All rights reserved." data-ukr="© 2024 ne3nayskas. Всі права захищені.">© 2024 ne3nayskas. All rights reserved.</p>
+    <p style="font-size: 12px; opacity: 0.7; margin-top: 10px;">
+        <span data-eng="The information presented here does not infringe any copyrights on logos, names, or content, and is provided solely for educational and programming purposes in JavaScript and HTML." 
+              data-ukr="Інформація, розміщена тут, не порушує авторських прав на логотипи, назви чи контент, і розміщена виключно з метою навчання та програмування в JavaScript та HTML.">
+            The information presented here does not infringe any copyrights on logos, names, or content, and is provided solely for educational and programming purposes in JavaScript and HTML.
+        </span>
+    </p>
+</footer>
+        
     </div>
 
     <script>
