--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <!-- Vote Colour -->
             <div class="plugin-card">
                 <h2>Vote Colour</h2>
-                <p data-eng="Color rating plugin on movie cards in Lampa" data-ukr="Плагін кольорового рейтингу на картках фільмів в Lampa">Color rating plugin on movie cards in Lampa</p>
+                <p data-eng="Plugin for adding color rating plugin on movie cards in Lampa" data-ukr="Плагін кольорового рейтингу на картках фільмів в Lampa">Color rating plugin on movie cards in Lampa</p>
                 <div class="links">
                     <a href="vote_colour.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">URL-link</a>
@@ -147,7 +147,7 @@
             <!-- Torr Styles -->
             <div class="plugin-card">
                 <h2>Torr Styles</h2>
-                <p data-eng="Plugin for styling Torrents results" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
+                <p data-eng="Plugin for adding styling Torrents results" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">URL-link</a>
@@ -180,7 +180,7 @@
             <!-- Exit -->
             <div class="plugin-card">
                 <h2>Exit</h2>
-                <p data-eng="Plugin for adding Exit button in Lampa menu" data-ukr="Плагін додавання кнопки Вихід - в меню Lampa">Plugin for adding Exit button in Lampa menu</p>
+                <p data-eng="Plugin for adding Exit button in Lampa for left menu" data-ukr="Плагін додавання кнопки Вихід - в меню Lampa">Plugin for adding Exit button in Lampa menu</p>
                 <div class="links">
                     <a href="exit.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">URL-link</a>
