--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <!-- Torr Styles -->
             <div class="plugin-card">
                 <h2>Torr Styles</h2>
-                <p data-eng="Plugin for adding styling Torrents results" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
+                <p data-eng="Plugin for adding styling Torrents results for Lampa" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">URL-link</a>
