--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plugins for Lampa</title>
+
+    <!-- Додати в <head> -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎁</text></svg>">
+    <meta name="description" content="Plugins for Lampa media player - collection of useful extensions and tools">
+    <meta name="keywords" content="lampa, plugins, media player, extensions, javascript">
+    
     <link rel="stylesheet" href="style.css">
     <style>
         .language-switcher {
