--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 <body>
     <div class="container">
         <div class="language-switcher">
-        <button class="lang-btn" data-lang="eng">ENG</button>
-        <button class="lang-btn" data-lang="ukr">UKR</button>
+        <button class="lang-btn" data-lang="eng" aria-label="Switch to English">ENG</button>
+        <button class="lang-btn" data-lang="ukr" aria-label="Перейти на українську">UKR</button>
         </div>
 
         <header>
