--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!-- Rating Omdb -->
             <div class="plugin-card">
                 <h2>Rating Omdb</h2>
-                <p data-eng="Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomato" data-ukr="Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato">Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomato</p>
+                <p data-eng="Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes" data-ukr="Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato">Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes</p>
                 <div class="links">
                     <a href="rating_omdb.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">URL-link</a>
