--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
 <body>
     <div class="container">
         <div class="language-switcher">
+            <nav aria-label="Мова сайту" style="display: contents;">
         <button class="lang-btn" data-lang="eng" aria-label="Switch to English">ENG</button>
         <button class="lang-btn" data-lang="ukr" aria-label="Перейти на українську">UKR</button>
+                </nav>
         </div>
 
         <header>
@@ -120,7 +122,7 @@
             <!-- Rating Omdb -->
             <div class="plugin-card">
                 <h2>Rating Omdb</h2>
-                <p data-eng="Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes" data-ukr="Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato">Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes</p>
+                <p data-eng="Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes" data-ukr="Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomatoes">Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes</p>
                 <div class="links">
                     <a href="rating_omdb.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">URL-link</a>
