--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
             <nav aria-label="Мова сайту" style="display: contents;">
         <button class="lang-btn" data-lang="eng" aria-label="Switch to English">ENG</button>
         <button class="lang-btn" data-lang="ukr" aria-label="Перейти на українську">UKR</button>
-                </nav>
+            </nav>
+            <button id="theme-toggle" class="theme-btn" aria-label="Перемкнути тему">
+        🌙
+            </button>
         </div>
 
         <header>
