--- a/index.html
+++ b/index.html
@@ -382,6 +382,8 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
+<script>
 // ==================== THEME TOGGLE ====================
 document.addEventListener('DOMContentLoaded', function() {
     const themeToggle = document.getElementById('theme-toggle');
@@ -409,5 +411,7 @@ document.addEventListener('DOMContentLoaded', function() {
             theme === 'dark' ? 'Увімкнути світлу тему' : 'Увімкнути темну тему');
     }
 });
+</script>
+
 </body>
 </html>
