--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
         </main>
 
         <!-- Мінімалістична донат-секція -->
-        <section class="donation-section">
-            <h2>💳 <span data-eng="USDT (TRC-20)"data-ukr="USDT (TRC-20)">Donate</span></h2>
-            <div class="wallet-address">
-                <span>TBFqyUHLUrv7dsH6kC82UBBDX4gcYCu1Kk</span>
-                <button class="copy-btn" data-eng="Copy" data-ukr="Копіювати">Copy</button>
-            </div>
-            <p style="font-size: 0.9em; color: #999; margin-top: 10px;">
-                <span data-eng="Thank you ☕️" data-ukr="Подяка ☕️">USDT (TRC-20)</span>
-            </p>
-        </section>
+<section class="donation-section">
+    <h2>💳 <span data-eng="Donate" data-ukr="Донат">Donate</span></h2>
+    <div class="wallet-address">
+        <span>TBFqyUHLUrv7dsH6kC82UBBDX4gcYCu1Kk</span>
+        <button class="copy-btn" data-eng="Copy" data-ukr="Копіювати">Copy</button>
+    </div>
+    <p style="font-size: 0.9em; color: #999; margin-top: 10px;">
+        <span data-eng="USDT (TRC-20)" data-ukr="USDT (TRC-20)">USDT (TRC-20)</span>
+    </p>
+</section>
 
         <footer>
             <p data-eng="© 2024 ne3nayskas. All rights reserved." data-ukr="© 2024 ne3nayskas. Всі права захищені.">© 2024 ne3nayskas. All rights reserved.</p>
