--- a/index.html
+++ b/index.html
@@ -301,15 +301,15 @@
 
         <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
-    <div class="wallet-address" style="display: flex; align-items: center; justify-content: center; gap: 10px; flex-wrap: wrap; padding: 10px;">
-        <span style="display: flex; align-items: center; gap: 5px; white-space: nowrap;">
-            💳 <span data-eng="USDT:" data-ukr="USDT:">USDT:</span>
+    <div class="wallet-address" style="display: flex; align-items: center; justify-content: center; gap: 10px; flex-wrap: wrap;">
+        <span style="display: flex; align-items: center; gap: 5px;">
+            💳 <span data-eng="USDT (TRC-20):" data-ukr="USDT (TRC-20):">USDT (TRC-20):</span>
         </span>
-        <span style="font-family: monospace; background: rgba(255,215,0,0.1); padding: 6px 12px; border-radius: 5px; font-size: 0.9em; word-break: break-all; max-width: 200px;">
+        <span style="font-family: monospace; background: rgba(255,215,0,0.1); padding: 5px 10px; border-radius: 4px; font-size: 0.9em;">
             TBFqyUHLUrv7dsH6kC82UBBDX4gcYCu1Kk
         </span>
         <button class="copy-btn" data-eng="Copy" data-ukr="Копіювати" 
-                style="background: transparent; border: 1px solid #FFD700; color: #FFD700; padding: 5px 12px; border-radius: 5px; cursor: pointer; transition: all 0.3s ease; font-size: 0.85em; white-space: nowrap;">
+                style="background: transparent; border: 1px solid #FFD700; color: #FFD700; padding: 4px 10px; border-radius: 4px; cursor: pointer; transition: all 0.3s ease; font-size: 0.85em;">
             Copy
         </button>
     </div>
