--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <span style="font-family: monospace; background: rgba(255,215,0,0.1); padding: 5px 10px; border-radius: 4px; font-size: 0.9em;">
             TBFqyUHLUrv7dsH6kC82UBBDX4gcYCu1Kk
         </span>
-        <button class="copy-btn" data-eng="Copy" data-ukr="Копіювати" 
+        <button class="copy-btn" data-eng="Thank You" data-ukr="Подякувати" 
                 style="background: transparent; border: 1px solid #FFD700; color: #FFD700; padding: 4px 10px; border-radius: 4px; cursor: pointer; transition: all 0.3s ease; font-size: 0.85em;">
             Copy
         </button>
